--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,21 +4,25 @@ activityCompose = "1.9.2"
 agp = "8.6.0-rc01"
 androidxLifecycleKtx = "2.8.5"
 appcompat = "1.7.0"
+junitVersion = "4.13.2"
 koinAndroid = "3.5.6"
 koinAnnotations = "1.3.1"
 koinKspCompiler = "1.3.1"
-androidxComposeBom = "2024.09.00"
+androidxComposeBom = "2024.09.01"
+koinTest = "3.5.6"
 kotlin = "2.0.20"
+kotlinxCoroutinesTest = "1.8.1"
 ksp = "2.0.20-1.0.25"
 lifecycleViewmodelCompose = "2.8.5"
 material = "1.12.0"
 material3 = "1.3.0"
 material3AdaptiveNavigationSuite = "1.3.0"
-materialIconsExtended = "1.7.0"
+materialIconsExtended = "1.7.1"
+mockk = "1.13.12"
 navigationCompose = "2.8.0"
 roomCompiler = "2.6.1"
-uiTooling = "1.7.0"
-uiToolingPreviewAndroid = "1.7.0"
+uiTooling = "1.7.1"
+uiToolingPreviewAndroid = "1.7.1"
 
 [libraries]
 accompanist-drawablepainter = { module = "com.google.accompanist:accompanist-drawablepainter", version.ref = "accompanistDrawablepainter" }
@@ -34,6 +38,11 @@ androidx-material3-adaptive-navigation-suite = { module = "androidx.compose.mate
 androidx-material3-window-size = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx" }
+junit-junit = { module = "junit:junit", version.ref = "junitVersion" }
+koin-test = { module = "io.insert-koin:koin-test", version.ref = "koinTest" }
+koin-test-junit4 = { module = "io.insert-koin:koin-test-junit4", version.ref = "koinTest" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomCompiler" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
