--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 accompanistDrawablepainter = "0.36.0"
 activityCompose = "1.9.2"
-agp = "8.6.0-rc01"
+agp = "8.6.0"
 androidxLifecycleKtx = "2.8.5"
 appcompat = "1.7.0"
 junitVersion = "4.13.2"
@@ -55,10 +55,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomCompiler" }
 
-
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id ="com.google.devtools.ksp", version.ref = "ksp" }
-
