--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ activityCompose = "1.9.2"
 agp = "8.6.0"
 androidxLifecycleKtx = "2.8.5"
 appcompat = "1.7.0"
+coreTesting = "2.2.0"
 junitVersion = "4.13.2"
 koinAndroid = "3.5.6"
 koinAnnotations = "1.3.1"
@@ -11,7 +12,6 @@ koinKspCompiler = "1.3.1"
 androidxComposeBom = "2024.09.01"
 koinTest = "3.5.6"
 kotlin = "2.0.20"
-kotlinxCoroutinesTest = "1.8.1"
 kotlinxSerializationJson = "1.7.2"
 ksp = "2.0.20-1.0.25"
 lifecycleViewmodelCompose = "2.8.5"
@@ -22,6 +22,11 @@ materialIconsExtended = "1.7.1"
 mockk = "1.13.12"
 navigationCompose = "2.8.0"
 roomCompiler = "2.6.1"
+roomRxjava3 = "2.6.1"
+runtimeLivedata = "1.7.1"
+rxjava = "3.1.9"
+rxandroid = "3.0.2"
+rxkotlinVersion = "3.0.1"
 uiTooling = "1.7.1"
 uiToolingPreviewAndroid = "1.7.1"
 
@@ -31,6 +36,7 @@ androidx-activity-compose = { module = "androidx.activity:activity-compose", ver
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx" }
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-material3 = { module = "androidx.compose.material3:material3" }
@@ -39,10 +45,11 @@ androidx-material3-adaptive-navigation-suite = { module = "androidx.compose.mate
 androidx-material3-window-size = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx" }
+androidx-room-rxjava3 = { module = "androidx.room:room-rxjava3", version.ref = "roomRxjava3" }
+androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "runtimeLivedata" }
 junit-junit = { module = "junit:junit", version.ref = "junitVersion" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koinTest" }
 koin-test-junit4 = { module = "io.insert-koin:koin-test-junit4", version.ref = "koinTest" }
-kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
@@ -54,6 +61,9 @@ koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", versi
 koin-annotations = { module = "io.insert-koin:koin-annotations", version.ref = "koinAnnotations" }
 koin-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "koinKspCompiler" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+rxandroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxandroid" }
+rxjava = { module = "io.reactivex.rxjava3:rxjava", version.ref = "rxjava" }
+rxjava3-rxkotlin = { module = "io.reactivex.rxjava3:rxkotlin", version.ref = "rxkotlinVersion" }
 symbol-processing-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomCompiler" }
 
